--- a/client/index.html
+++ b/client/index.html
@@ -59,7 +59,7 @@
             <div class="card-body">
                 <h5 class="card-title">${tweetData.text}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">${tweetData.username}</h6>
-                <<h6 class="card-subtitle mb-2 text-muted">${tweetData.sentimentData}</h6>
+                <h6 class="card-subtitle mb-2 text-muted">${tweetData.sentiment}</h6>
                 <a class="btn btn-primary mt-3" href="https://twitter.com/${tweetData.username}/status/${tweetData.id}">
                     <i class="fab fa-twitter"></i> Go To Tweet    
                 </a>
